--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -103,6 +103,16 @@
 	langid = {en}
 }
 
+@article{ben2020effectsize,
+  title={effectsize: Estimation of effect size indices and standardized parameters},
+  author={Ben-Shachar, Mattan S and L{\"u}decke, Daniel and Makowski, Dominique},
+  journal={Journal of Open Source Software},
+  volume={5},
+  number={56},
+  pages={2815},
+  year={2020}
+}
+
 @article{garfinkel2015knowing,
   title={Knowing your own heart: distinguishing interoceptive accuracy from interoceptive awareness},
   author={Garfinkel, Sarah N and Seth, Anil K and Barrett, Adam B and Suzuki, Keisuke and Critchley, Hugo D},
@@ -110,6 +120,27 @@
   volume={104},
   pages={65--74},
   year={2015},
+  publisher={Elsevier}
+}
+
+@article{leising2009toronto,
+  title={The Toronto Alexithymia Scale (TAS-20): A measure of general psychological distress},
+  author={Leising, Daniel and Grande, Tilman and Faber, Rainer},
+  journal={Journal of research in personality},
+  volume={43},
+  number={4},
+  pages={707--710},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{suksasilp2022towards,
+  title={Towards a comprehensive assessment of interoception in a multi-dimensional framework},
+  author={Suksasilp, Chatrin and Garfinkel, Sarah N},
+  journal={Biological Psychology},
+  volume={168},
+  pages={108262},
+  year={2022},
   publisher={Elsevier}
 }
 
