--- a/paper/1_Initial/manuscript2.tex
+++ b/paper/1_Initial/manuscript2.tex
@@ -184,14 +184,14 @@ and its Subjective Correlates}
 
 \authornote{\par{\addORCIDlink{Ana Neves}{0009-0006-0020-7599}} 
 
-\par{     \begin{tcolorbox}[enhanced jigsaw, left=2mm, arc=.35mm, bottomrule=.15mm, breakable, toprule=.15mm, rightrule=.15mm, leftrule=.75mm, opacityback=0, colback=white, colframe=quarto-callout-note-color-frame]
+\par{     \begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, rightrule=.15mm, bottomrule=.15mm, colframe=quarto-callout-note-color-frame, left=2mm, toprule=.15mm, arc=.35mm, breakable, opacityback=0, colback=white]
 
 \end{tcolorbox}
 
 This preprint is a non-peer-reviewed work from the
 \href{https://realitybending.github.io/}{\textbf{Reality Bending Lab}}.
 \begin{center}
-\includegraphics[width=0.2\textwidth,height=\textheight]{manuscript_files/mediabag/ReBeL_LogoOnly_hu114.png}
+\includegraphics[width=0.2\textwidth,height=\textheight]{manuscript2_files/mediabag/ReBeL_LogoOnly_hu114.png}
 \end{center}  Author roles were classified using the Contributor Role Taxonomy (CRediT; https://credit.niso.org/) as follows: Ana
 Neves:   Project administration, Data curation, Formal
 Analysis, Investigation, Visualization, Writing -- original
@@ -322,16 +322,16 @@ well being), the field remains clouded by concerns about how
 interoception is assessed.
 
 Various measures of interoception have been developed (see
-Figure~\ref{fig-measures}), forming a combination of ``objective'' and
-``subjective'' assessments (i.e., physiological tasks such as the heart
-beat counting or tracking vs.~questionnaires and subjective scales
-involving a metacognitive reflection), ``explicit'' and ``implicit''
-paradigms (i.e., directing participants' awareness and attention to
-interoceptive processes \emph{vs.} measuring interoception unbeknownst
-to them), various interoceptive modalities (e.g., cardioception,
-respiroception, gastroception) and theoretical dimensions (e.g.,
-accuracy, sensitivity, awareness). While there is no consensus as to
-which particular approach provides the most accurate and ``pure''
+\textbf{Figure~\ref{fig-measures}}), forming a combination of
+``objective'' and ``subjective'' assessments (i.e., physiological tasks
+such as the heart beat counting or tracking vs.~questionnaires and
+subjective scales involving a metacognitive reflection), ``explicit''
+and ``implicit'' paradigms (i.e., directing participants' awareness and
+attention to interoceptive processes \emph{vs.} measuring interoception
+unbeknownst to them), various interoceptive modalities (e.g.,
+cardioception, respiroception, gastroception) and theoretical dimensions
+(e.g., accuracy, sensitivity, awareness). While there is no consensus as
+to which particular approach provides the most accurate and ``pure''
 measure of interoception and interoceptive abilities (assuming it is a
 unidimensional construct), it is instead plausible that each measure has
 strengths and limitations, and a utility dependent on the context and
@@ -551,7 +551,7 @@ items across various datasets.}
 
 \centering{
 
-\includegraphics{figures/Figure1.png}
+\includegraphics[width=6.67in,height=\textheight]{figures/Figure1.png}
 
 }
 
@@ -641,7 +641,7 @@ in result, as well as underlying mechanisms.
 There are several items that show redundancy suggesting that adapting
 the IAS would be beneficial for validity. Based on the given results, we
 suggest removing the tickle, while keeping the itch item
-{[}\textbf{todo}: stats?{]} . Other items with slight redundancy were
+{[}\textbf{todo}: stats?{]}. Other items with slight redundancy were
 Hungry and Thirsty, Urinate and Defecate, and Sneeze and Cough.
 
 Interestingly, Lin et al. (\citeproc{ref-lin2023}{2023}) also found that
@@ -697,7 +697,7 @@ Bayesian framework (ref).
 
 \subsubsection{Results}\label{results-1}
 
-\textbf{todo: compute average correlations}
+\textbf{todo: compute average correlations }
 
 The EGA components capture groupings of pairs of items, such as ``wind''
 and ``burp'', ``cough'' and ``sneeze'', or ``muscle'' and ``pain''.
